fluxcd/clusters/local/base/external-name.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: model
  namespace: default
spec:
  type: ExternalName
  externalName: traefik.traefik.svc.cluster.local
---
