fluxcd/clusters/local/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: model
  namespace: traefik
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: model
      namespace: default
      port: 11434
      weight: 1
    matches:
    - headers:
      - name: hostname
        type: Exact
        value: model.traefik.svc.cluster.local
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: model
  namespace: default
  labels:
    model: model 
spec:
  from: 
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
      name: model
---
